@@ -1,3 +1,7 @@
+2022-08-14  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-rstdoc.el: new file.
+
 2022-08-10  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-angg-not-configured)
